src-tauri/src/agent_sessions/cli/parsers/tests/snapshots/app_lib__cli_agents__parsers__acp_common__tests__norm_read_success.snap
---
source: src/cli_agents/parsers/acp_common_tests.rs
expression: result
---
success:
  content: file content
  fileSize: 0
  path: ""
  totalLines: 0
