src-tauri/src/agent_sessions/cli/parsers/tests/snapshots/app_lib__cli_agents__parsers__acp_common__tests__norm_shell_error.snap
---
source: src/cli_agents/parsers/acp_common_tests.rs
expression: result
---
error:
  stderr: ""
  stdout: error msg
