src-tauri/src/agent_sessions/cli/parsers/tests/snapshots/app_lib__cli_agents__parsers__acp_common__tests__todos_checked_unchecked.snap
---
source: src/cli_agents/parsers/acp_common_tests.rs
expression: result
---
- content: Done task
  id: "1"
  status: completed
- content: Pending task
  id: "2"
  status: pending
