src-tauri/src/agent_sessions/cli/parsers/tests/snapshots/app_lib__cli_agents__parsers__acp_common__tests__todos_non_numeric_prefix.snap
---
source: src/cli_agents/parsers/acp_common_tests.rs
expression: result
---
- content: abc. Not a number prefix
  id: "1"
  status: pending
