src-tauri/src/agent_sessions/cli/parsers/tests/snapshots/app_lib__cli_agents__parsers__acp_common__tests__tool_call_raw_output.snap
---
source: src/cli_agents/parsers/acp_common_tests.rs
expression: "serde_json::json!({ \"content\": content, \"detailed\": detailed, })"
---
content: result text
detailed: detailed info
